--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Campus Navigator</title>
 </head>
+<script src="script.js"></script>
 <body>
     
 </body>
