feat(Hero-section): add hero section

--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Campus Navigator</title>
 </head>
 <script src="script.js"></script>
 <body>
+
+
+    <div class="hero-section">
+        <div class="leftbox-hs">
+            <div class="tagline-hs">
+                <span>Your Smart Guide to Campus Life</span>
+                <p>know your campus, get aware of events and places and many more to go</p>
+            </div>
+        </div>
+        <div class="rightbox-hs">
+            <div class="logo-hs">
+                <img src="./assets/images/logo/logo-grdient.svg" alt="logo-grdient">
+            </div>
+        </div>
+        <div class="call2action">Explore</div>
+    </div>
+
     
 </body>
 </html>
