fix(Logo, tagline): set width based on vw

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="hero-section">
         <div class="leftbox-hs">
             <div class="tagline-hs">
-                <span>Your Smart Guide to Campus Life</span>
-                <p>know your campus, get aware of events and places and many more to go</p>
+                <span>Your Smart Guide <br> to Campus Life</span>
+                <p>know your campus, get aware of events and places and <br> many more to go</p>
             </div>
         </div>
         <div class="rightbox-hs">
