feat(map/index.html): add floating icons (food, drink, mart etc.)
Implements floating icons for markers in the map UI with JS

--- a/map/index.html
+++ b/map/index.html
@@ -33,5 +33,13 @@
             </div>
         </div>
     </div>
+    <div class="options">
+        <div class="icons" id=""  ><img src="./assets/icons/car.svg" alt="" onclick=""></div>
+        <div class="icons" id=""  ><img src="./assets/icons/cart.svg" alt="" onclick=""></div>
+        <div class="icons" id=""  ><img src="./assets/icons/drinks.svg" alt="" onclick=""></div>
+        <div class="icons" id=""  ><img src="./assets/icons/food.svg" alt="" onclick=""></div>
+        <div class="icons" id="options"><img src="./assets/icons/options-snack-bar.svg" alt="" onclick=""></div>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
